--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ Werkzeug==0.15.5
 dnspython>=1.16.0
 keras>=2.4.3
 gevent>=20.6.2
-opencv-python>=4.4.0.42
+opencv-python-headless>=4.4.0.42
 tensorflow>=2.3.0
